# sunday-league

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
bot/config/: settings.py
bot/handlers/: callbacks.py  matches.py  start.py  statistics.py  tournament.py
bot/models/: tournament.py
bot/utils/: helpers.py  keyboards.py
